--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-flask
-tensorflow-cpu==2.11.0
-opencv-python
+Flask==3.1.0
+gunicorn
+tensorflow-cpu==2.10.0  # Version compatible avec Heroku
 numpy
+opencv-python-headless 
