--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Flask==3.1.0
 gunicorn
-tensorflow-cpu==2.10.0  # Version compatible avec Heroku
-numpy
-opencv-python-headless 
+tensorflow-cpu==2.10.0
+numpy<2.0
+opencv-python-headless
