--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 Flask==3.1.0
-gunicorn
-tensorflow-cpu==2.10.0
-numpy==1.23.5
+gunicorn==20.1.0
+tensorflow-cpu==2.11.0  # ✅ Essayer avec cette version
+numpy==1.26.0
 opencv-python-headless
-keras==2.10.0
+keras==2.11.0
+h5py==3.12.1
+protobuf==3.19.6
